changed cors origin and made some changes